# prodstats

./: .gitignore  Cargo.toml  README.md  install.sh
docs/: INSTALL-AGENTS.md  LINUX-COMPAT.md  METRICS.md  OMARCHY.md  PRIVACY.md
src/: agents.rs  config.rs  csv_store.rs  display.rs  gitlog.rs  input.rs  install.rs  lib.rs  main.rs  paths.rs  state.rs
tests/: agents_tests.rs  display_tests.rs  gitlog_tests.rs  input_tests.rs  install_tests.rs  state_tests.rs
